--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#download">Download</a></li>
+								<li><a href="https://cdn.discordapp.com/attachments/453259359238225943/453655901195206656/setup.exe">Download</a></li>
+								<li><a href="#video">Video & Screenshots</a></li>
 								<li><a href="#features">Features</a></li>
-								<li><a href="#about">About</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -41,23 +41,76 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Download -->
-							<article id="download">
-								<h2 class="major">Download</h2>
+						<!-- Video -->
+							<article id="video">
+								<h2 class="majormiddle">Video & Screenshots</h2>
 								<iframe class="image main"  width="560" height="315" src="https://www.youtube.com/embed/efCN_7TS3wM?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<a href="https://cdn.discordapp.com/attachments/453259359238225943/453655901195206656/setup.exe" class="button icon fa-download">Download</a>
+								<p></p>
 							</article>
 
 						<!-- Features -->
-							<article id="features">
-								<h2 class="major">Features</h2>
-
-								<ol>
-									<li>123</li>
-									<li>123</li>
-									<li>123</li>
-								</ol>
+							<article id="features" style="">
+							<h2 class="majormiddle">Features</h2>
+									<div style="float:right">
+		 								<h4>Teleporting:</h4>
+		 								<ol>
+		 									<li>Vehicle Simulator</li>
+		 									<li>Mining Simulator</li>
+		 									<li>Lumber Tycoon</li>
+		 									<li>Epic Minigames</li>
+		 									<li>Ripull Minigames</li>
+		 									<li>Treasure Hunt Simulator</li>
+		 									<li>Mega Fun Obby</li>
+		 									<li>Murder Mystery 2</li>
+		 									<li>Natural Disaster Survival</li>
+		 									<li>Super Bomb Survival!!!</li>
+		 									<li>Prison Life</li>
+		 									<li>Super Hero Tycoon</li>
+		 									<li>Blox Hunt</li>
+		 									<li>Lab Experiment</li>
+		 									<li>Hide And Seek Extreme</li>
+		 									<li>CB:RO (IN PROGRESS)</li>
+		 								</ol>
+	 							  </div>
+								  <div style="float:left; width:60%">
+										<h4>Commands:</h4>
+										<ol>
+											<li>cls, clear - clears output</li>
+											<li>hipheight [N] - sets your hipheight</li>
+											<li>kill [P] - kills selected player</li>
+											<li>float [P] - makes selected player float</li>
+											<li>nofloat [P] - stops floating</li>
+											<li>chat [P] [T] - forces bubble chat on player</li>
+											<li>ff [P] - creates forcefield on player</li>
+											<li>noff [P] - takes forcefield from player</li>
+											<li>blockhead [P] - turns players head to a block</li>
+											<li>nolimbs [P] - remove limbs</li>
+											<li>noarms [P] - remove arms</li>
+											<li>nolegs [P] - remove legs</li>
+											<li>fire [P] - burns selected player</li>
+											<li>nofire [P] - removes fire from selected player</li>
+											<li>sparkles [P] - gives player sparkles</li>
+											<li>nosparkles [P] - removes sparkles</li>
+											<li>smoke [P] - adds smoke</li>
+											<li>print [T] - prints text to console</li>
+											<li>warn [T] - prings text to console in red color</li>
+											<li>music [N] - plays music by id</li>
+											<li>skybox [N] - change skybox to selected</li>
+											<li>jp [N] - change your jumppower</li>
+											<li>ws [N] [P] - change players walkspeed</li>
+											<li>bws [N] - change your walkspeed [BYPASSED]</li>
+											<li>lt2ww - enable Lumber Tycoon 2 waterwalk</li>
+											<li>ad - enable alt destroy</li>
+											<li>an - enable alt noclip</li>
+											<li>in - enable infinite jailbreak nitro</li>
+											<li>ct - toggle clicktp</li>
+											<li>gm - enable fe god mode (works but you cant disable and you cant do some things)</li>
+											<li>tp - working teleport to player! (works for cbro, not works in jailbreak, not works in some another games, but its better than nothing for not level 7 exploit :P)</li>
+										</ol>
+								  </div>
+					    <!--</li>-->
+							<!--</ul>-->
 							</article>
 
 						<!-- About -->
