--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>MGSploit - Roblox exploit</h1>
+								<h1 class="nocsssupport">Updrage your browser! Your dont support css!</h1>
 								<p>MGSploit is a free Roblox exploit with a lot of teleports for different games, some jailbreak cheats like bypassed walkspeed and infinite nitro, limited lua, lua c, script hub, and tp to player!</p>
 							</div>
 						</div>
