--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 -->
 <html>
 	<head>
-		<title>MGSploit - Test!</title>
+		<title>MGSploit - Roblox exploit</title>
+		<meta name="description" content="MGSploit - free Roblox exploit made using c# and WeAreDevs API, there are jailbreak cheats, teleport to player, teleports for some games and much more!">
+		<link rel="shortcut icon" href="images/MGSploit.ico"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +23,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-diamond"></span>
+							<span><img src="images/MGSploit.png" alt="MGSploit Logo" /></span>
 						</div>
 						<div class="content">
 							<div class="inner">
