--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span><img src="images/MGSploit.png" alt="MGSploit Logo" /></span>
+							<span class="icon fa-gamepad"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
