--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ link.setAttribute('rel', 'stylesheet');
 link.setAttribute('type', 'text/css');
 link.setAttribute('href', 'assets/css/main.css');
 document.getElementsByTagName('head')[0].appendChild(link);
+/* TAWK SCRIPT */
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -62,17 +63,10 @@ s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 }
-</script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-
-</script>
-<!--End of Tawk.to Script-->
-<script>
 window.onload = function() {
     loaddone(); // Your function call
 };
-</script>
+		</script>
 		<!--<link rel="stylesheet" href="assets/css/main.css" />-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 
@@ -181,14 +175,14 @@ window.onload = function() {
 							<!--</ul>-->
 							</article>
 
-						<!-- About -->
+						<!-- 
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Test</p>
 							</article>
 
-						<!-- Contact -->
+
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
@@ -217,7 +211,7 @@ window.onload = function() {
 								</ul>
 							</article>
 
-						<!-- Elements -->
+
 							<article id="elements">
 								<h2 class="major">Elements</h2>
 
@@ -458,6 +452,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</section>
 
 							</article>
+						-->
 
 					</div>
 
