--- a/index.html
+++ b/index.html
@@ -52,17 +52,21 @@ link.setAttribute('rel', 'stylesheet');
 link.setAttribute('type', 'text/css');
 link.setAttribute('href', 'assets/css/main.css');
 document.getElementsByTagName('head')[0].appendChild(link);
-/* TAWK SCRIPT */
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5b1d9553b6f27c3410a4de23/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
 }
+		</script>
+		<script>
+		/* TAWK SCRIPT */
+		var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+		(function(){
+		var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+		s1.async=true;
+		s1.src='https://embed.tawk.to/5b1d9553b6f27c3410a4de23/default';
+		s1.charset='UTF-8';
+		s1.setAttribute('crossorigin','*');
+		s0.parentNode.insertBefore(s1,s0);
+		})();
+		</script>
+		<script>
 window.onload = function() {
     loaddone(); // Your function call
 };
@@ -175,7 +179,7 @@ window.onload = function() {
 							<!--</ul>-->
 							</article>
 
-						<!-- 
+						<!--
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
