--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="shortcut icon" href="images/MGSploit.ico"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/css/loader.css"/>
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="assets/css/noscript.css"/>
@@ -76,10 +77,6 @@ window.onload = function() {
 
 	</head>
 	<body>
-		<div id="loader1" class="loader">
-		<div class="lds-ring" id="loader2"><div></div><div></div><div></div><div></div></div>
-	</div>
-
 		<!-- Wrapper -->
 			<div id="wrapper" class="hidewhenloading">
 
