--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/loader.css"/>
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="assets/css/noscript.css"/>
 			<style>
