--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ window.onload = function() {
 						<!-- Video -->
 							<article id="video">
 								<h2 class="majormiddle">Video & Screenshots</h2>
-								<iframe class="image main"  width="560" height="315" src="https://www.youtube.com/embed/efCN_7TS3wM?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								Video Currently Removed
 								<a href="https://cdn.discordapp.com/attachments/453259359238225943/453655901195206656/setup.exe" class="button icon fa-download">Download</a>
 								<p></p>
 							</article>
